[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twh"
version = "0.1.0"
description = "Hierarchical views of Taskwarrior tasks"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
twh = "twh:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
cache-dir = ".uvcache"
