[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twh"
version = "0.18.0"
description = "Hierarchical views of Taskwarrior tasks"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "prompt_toolkit>=3.0.0",
    "typer>=0.15.0",
    "pip"
]

[project.scripts]
twh = "twh:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that exercise multiple components",
    "slow: tests that are slow or require external dependencies",
]

[tool.uv]
cache-dir = ".uvcache"

[tool.commitizen]
name = "cz_customize"
version = "0.18.0"
version_provider = "pep621"
version_scheme = "semver"
version_files = [
    "pyproject.toml:version"
]
tag_format = "$version"
ignored_tag_formats = [
    "passes-all-unit-tests-*",
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = false
bump_message = "bump: version $current_version → $new_version"
gpg_sign = false
annotated_tag = true
major_version_zero = false
prerelease_offset = 0
retry_after_failure = false
allow_abort = false
message_length_limit = 0
allowed_prefixes = [
    "Merge",
    "Revert",
    "Pull request",
    "fixup!",
    "squash!",
    "amend!"
]
breaking_change_exclamation_in_title = false
use_shortcuts = false
pre_bump_hooks = []
post_bump_hooks = []
encoding = "utf-8"

# Optional: Custom styling for prompts
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.commitizen.customize]
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}: {{subject}}{% if body %}\n\n{{body}}{% endif %}{% if breaking %}\n\nBREAKING CHANGE: {{footer}}{% elif footer %}\n\n{{footer}}{% endif %}"
commit_parser = '^(?P<change_type>feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert|BREAKING CHANGE)(\((?P<scope>[^)]+)\))?(!)?:\s(?P<message>.+)'
changelog_pattern = '^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert|BREAKING CHANGE)(\(.+\))?(!)?:'
change_type_order = [
    "Breaking Changes",
    "Features",
    "Fixes",
    "Performance",
    "Refactors",
    "Documentation",
    "Tests",
    "Build",
    "CI",
    "Chores",
    "Style",
    "Reverts",
]

[tool.commitizen.customize.bump_map]
"^.+!$" = "MAJOR"
"^BREAKING[- ]CHANGE" = "MAJOR"
"^feat" = "MINOR"
"^fix" = "PATCH"
"^refactor" = "PATCH"
"^perf" = "PATCH"
"^docs" = "PATCH"
"^test" = "PATCH"
"^build" = "PATCH"
"^ci" = "PATCH"
"^chore" = "PATCH"
"^style" = "PATCH"
"^revert" = "PATCH"

[tool.commitizen.customize.bump_map_major_version_zero]
"^.+!$" = "MINOR"
"^BREAKING[- ]CHANGE" = "MINOR"
"^feat" = "MINOR"
"^fix" = "PATCH"
"^refactor" = "PATCH"
"^perf" = "PATCH"
"^docs" = "PATCH"
"^test" = "PATCH"
"^build" = "PATCH"
"^ci" = "PATCH"
"^chore" = "PATCH"
"^style" = "PATCH"
"^revert" = "PATCH"

[tool.commitizen.customize.change_type_map]
"BREAKING CHANGE" = "Breaking Changes"
feat = "Features"
fix = "Fixes"
refactor = "Refactors"
perf = "Performance"
docs = "Documentation"
test = "Tests"
build = "Build"
ci = "CI"
chore = "Chores"
style = "Style"
revert = "Reverts"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Select the type of change you are committing"
choices = [
    {value = "feat", name = "feat: A new feature"},
    {value = "fix", name = "fix: A bug fix"},
    {value = "docs", name = "docs: Documentation only changes"},
    {value = "style", name = "style: Changes that do not affect the meaning of the code"},
    {value = "refactor", name = "refactor: A code change that neither fixes a bug nor adds a feature"},
    {value = "perf", name = "perf: A code change that improves performance"},
    {value = "test", name = "test: Adding missing tests or correcting existing tests"},
    {value = "build", name = "build: Changes that affect the build system or external dependencies"},
    {value = "ci", name = "ci: Changes to CI configuration files and scripts"},
    {value = "chore", name = "chore: Other changes that don't modify src or test files"},
    {value = "revert", name = "revert: Revert a previous commit"},
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "scope"
message = "What is the scope of this change? (press enter to skip)"

[[tool.commitizen.customize.questions]]
type = "input"
name = "subject"
message = "Write a short and imperative summary of the code changes"

[[tool.commitizen.customize.questions]]
type = "input"
name = "body"
message = "Provide additional contextual information about the code changes (press enter to skip)"

[[tool.commitizen.customize.questions]]
type = "confirm"
name = "breaking"
message = "Is this a BREAKING CHANGE?"
default = false

#[[tool.commitizen.customize.questions]]
#type = "input"
#name = "footer"
#message = "Footer. Information about breaking changes and reference issues (press enter to skip)"
